Add site data to template, and remove _site

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-name: AndyVanee.com
-description: Thoughts on Programming, Metaphysics, and anything in between
-url: http://andyvanee.com
+name: 'andyvanee.com'
+description: 'Thoughts on Programming, Metaphysics, and anything in between'
+url:  'http://andyvanee.com'
 pygments:  true
 exclude:   src
 paginate:  16
