Moving to build and publish to master

--- a/src/bootstrap/Makefile
+++ b/src/bootstrap/Makefile
@@ -1,12 +1,12 @@
-BOOTSTRAP_LESS = ./less/bootstrap.less
+BOOTSTRAP_LESS = './less/bootstrap.less'
+TARGET_BASE = '../../_site'
 #
 # BUILD SIMPLE BOOTSTRAP DIRECTORY
 # lessc & uglifyjs are required
 #
+.PHONY: bootstrap
 
 bootstrap:
-	cp img/* ../../img/
-	recess --compress ${BOOTSTRAP_LESS} > ../../css/bootstrap.min.css
-	cp ../../css/bootstrap.min.css ../../_site/css/bootstrap.min.css
-
-.PHONY: bootstrap
+	mkdir -p ${TARGET_BASE}/img ${TARGET_BASE}/css
+	cp img/* ${TARGET_BASE}/img
+	recess --compress ${BOOTSTRAP_LESS} > ${TARGET_BASE}/css/bootstrap.min.css
