--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@ name: 'andyvanee.com'
 description: 'Thoughts on Programming, Metaphysics, and anything in between'
 url:  'http://andyvanee.com'
 pygments:  true
-exclude:   src
+exclude: [src, Makefile, README.md]
 paginate:  16
