--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,1 @@
-name: 'andyvanee.com'
-description: 'Thoughts on Programming, Metaphysics, and anything in between'
-url:  'http://andyvanee.com'
-pygments:  true
-exclude: [src, Makefile, README.md]
-paginate:  16
+url: http://andyvanee.com
