--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "_site"]
-    path = _site
+[submodule "public"]
+    path = public
     url = git@github.com:Andyvanee/andyvanee.github.com.git
