--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ url:  'http://andyvanee.com'
 pygments:  true
 exclude: []
 paginate:  16
-destination: ./tmp/jekyll
-source:  ./jekyll
-plugins: ./jekyll/_plugins
+destination: ./tmp/src
+source:  ./src
+plugins: ./src/_plugins
 api: 'http://0.0.0.0:4567'
