--- a/wercker.yml
+++ b/wercker.yml
@@ -22,4 +22,4 @@ deploy:
             cwd: build/
             code: |
                 ls
-                s3cmd put --acl-public --add-header=Cache-Control:max-age=86400 --verbose index.html s3://andyvanee.com/
+                s3cmd put --acl-public --add-header=Cache-Control:max-age=86400 --verbose index.html $AWS_BUCKET_URL
