--- a/wercker.yml
+++ b/wercker.yml
@@ -10,10 +10,10 @@ build:
 deploy:
     steps:
         # Execute the s3sync deploy step, a step provided by wercker
-        # Cache-Control is set to one week
+        # Cache-Control is set to one day
         - s3sync:
             key_id: $AWS_ACCESS_KEY
             key_secret: $AWS_SECRET_KEY
             bucket_url: $AWS_BUCKET_URL
             source_dir: build/
-            opts: --acl-public --add-header=Cache-Control:max-age=86400
+            opts: --acl-public --add-header=Cache-Control:public, max-age=86400
