--- a/wercker.yml
+++ b/wercker.yml
@@ -1,6 +1,9 @@
 box: wercker/ruby@1.0.0
 build:
     steps:
+        - script:
+            name: install latest bundler
+            code: gem install bundler --version '>= 1.7'
         # Execute the bundle install step, a step provided by wercker
         - wercker/bundle-install@2.0.1
         # Execute a custom script step.
